force-app/main/default/objects/OCLQS_Transaction_Monitor__c/OCLQS_Transaction_Monitor__c.object-meta.xml
<CustomObject>
    <description>Object to store transaction monitoring details
Build for Integration purpose</description>
    <label>Integration Monitor</label>
    <nameField>
        <displayFormat>Monitor-{000000}</displayFormat>
        <label>Reference Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Monitor</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>