force-app/main/default/objects/OCLQS_Transaction_Monitor__c/fields/API_Conversation__c.field-meta.xml
<CustomField>
    <fullName>API_Conversation__c</fullName>
    <label>API Conversation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>