force-app/main/default/objects/OCLQS_Transaction_Monitor__c/fields/Request_Message__c.field-meta.xml
<CustomField>
    <fullName>Request_Message__c</fullName>
    <label>Request Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>