force-app/main/default/objects/OCLQS_Transaction_Monitor__c/fields/Transaction_Log__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Log__c</fullName>
    <label>Transaction Log</label>
    <referenceTo>OCLQS_Transaction_Log__c</referenceTo>
    <relationshipLabel>Integration Monitor</relationshipLabel>
    <relationshipName>Int_rel_PIntLog_CIntError</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>